--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {
